--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
   "name": "criss-shop",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://crisssic.github.io/criss-shop",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-rating-stars-component": "^2.2.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-simple-star-rating": "^4.0.5",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
